# pitch_detector

./: .gitignore  Dockerfile  LICENSE  Makefile  Procfile  README.md  main.py  plots.py  pyproject.toml
app/: app.py  index.html
app/templates/: index.html
data/processed/: f0_values.npz
data/raw/: basic_chinese_characters_ankicard.csv  basic_chinese_characters_ankicard.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: Fundamental_frequency_F0.ipynb  Readme.md
pitch_detector/: __init__.py  contour.py  plots.py  processing.py  tones.py
pitch_detector/modeling/: train.py
pitch_detector_app/: __init__.py  app.py  dataset.py  features.py  plots.py  processing.py
pitch_detector_app/modeling/: predict.py
pitch_detector_app/templates/: index.html
src/pitch_detector/: app.py  config.yaml  plots.py  processing.py  tones.py
src/pitch_detector/templates/: index.html
src/pitch_detector/tests/: test_all.py
templates/: index.html
tests/: test_all.py  test_data.py
