[project]
name = "pitch-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "gunicorn>=23.0.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "tqdm>=4.67.1",
]
