[project]
name = "pitch-detector"
version = "0.1.0"
description = "A web application for real-time fundamental frequency (F0) extraction and visualization, originally designed to help Chinese learners analyze and practice pronunciation tones."
readme = "README.md"
authors = [{name = "Ulises Rey"}]
requires-python = ">=3.12,<3.14"
dependencies = [
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "gunicorn>=23.0.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.5",
    "mkdocs>=1.6.1",
    "pandas>=2.3.1",
    "pytest>=8.4.1",
    "pyyaml>=6.0.3",
    "tqdm>=4.67.1",
]


[tool.setuptools.packages]
find = { where = ["src"] }
